--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">SFParks</string>
+    <string name="app_name">SF Parks</string>
+
+    <string name="error_connection">No Internet Connection Detected</string>
+    <string name="try_again">Try Again</string>
 </resources>
